--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 PORT=3005
-DB_CNN=mongodb+srv://gjpierp_a_adv:G3rC4t_2025_01@cluster0.hvesf9e.mongodb.net/hospitaldb
+DB_CNN=mongodb+srv://gjpierp_a_adv:G3rC4t_2025_01@cluster0.td3jd0r.mongodb.net/hospitaldb
+JWT_SECRET=your_jwt_secret_key_2025
+
