--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.17.1",
+    "express-fileupload": "^1.5.2",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.0.0"
+    "mongoose": "^9.0.0",
+    "uuid": "^13.0.0"
   }
 }
